# AgentDevelopBaseLangChain

./: .env  .env.example  .gitignore  AI_prd_init.md  Dockerfile  Python 项目通用初始化指南.md  README.md  docker-compose.yml  pyproject.toml
init-db/: 01-init.sql
src/: model_Blender.py
src/agent_develop_base/: __init__.py  config.py  main.py
tests/: test_main.py
